--- a/test.ipynb
+++ b/test.ipynb
@@ -225,7 +225,7 @@
     "# Load Dataset\n",
     "df = pd.read_csv('Loan.csv')\n",
     "\n",
-    "# Show first 5\n",
+    "# Show first 5 //\n",
     "df.head()"
    ]
   },
