--- a/test.ipynb
+++ b/test.ipynb
@@ -225,16 +225,271 @@
     "# Load Dataset\n",
     "df = pd.read_csv('Loan.csv')\n",
     "\n",
-    "# Show first 5 //\n",
+    "# Show first 5\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         7.929853\n",
+       "1         4.167327\n",
+       "2         5.092486\n",
+       "3         5.495906\n",
+       "4        26.062620\n",
+       "           ...    \n",
+       "19995     2.776650\n",
+       "19996     4.281983\n",
+       "19997     4.315332\n",
+       "19998     8.314722\n",
+       "19999     4.225047\n",
+       "Name: Neue_Zeile_SCHULDENVERHÄLTNIS, Length: 20000, dtype: float64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\" Monthly Income / Monthly Loan Payment \"\"\"\n",
+    "\"\"\" Erstelle neue Zeile im bestehenden Dataaset df \"Neue_Zeile_SCHULDENVERHÄLTNIS \"\"\"\n",
+    "\n",
+    "df[\"Neue_Zeile_SCHULDENVERHÄLTNIS\"] = (\n",
+    "    df[\"MonthlyIncome\"] / df[\"MonthlyLoanPayment\"]\n",
+    ")\n",
+    "\n",
+    "\"\"\" Adde neue Spalte zum PANDA DATAFRAME DF \"\"\"\n",
+    "df[\"Neue_Zeile_SCHULDENVERHÄLTNIS\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ApplicationDate</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>AnnualIncome</th>\n",
+       "      <th>CreditScore</th>\n",
+       "      <th>EmploymentStatus</th>\n",
+       "      <th>EducationLevel</th>\n",
+       "      <th>Experience</th>\n",
+       "      <th>LoanAmount</th>\n",
+       "      <th>LoanDuration</th>\n",
+       "      <th>MaritalStatus</th>\n",
+       "      <th>...</th>\n",
+       "      <th>UtilityBillsPaymentHistory</th>\n",
+       "      <th>JobTenure</th>\n",
+       "      <th>NetWorth</th>\n",
+       "      <th>BaseInterestRate</th>\n",
+       "      <th>InterestRate</th>\n",
+       "      <th>MonthlyLoanPayment</th>\n",
+       "      <th>TotalDebtToIncomeRatio</th>\n",
+       "      <th>LoanApproved</th>\n",
+       "      <th>RiskScore</th>\n",
+       "      <th>Neue_Zeile_SCHULDENVERHÄLTNIS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>45</td>\n",
+       "      <td>39948</td>\n",
+       "      <td>617</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>Master</td>\n",
+       "      <td>22</td>\n",
+       "      <td>13152</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.724972</td>\n",
+       "      <td>11</td>\n",
+       "      <td>126928</td>\n",
+       "      <td>0.199652</td>\n",
+       "      <td>0.227590</td>\n",
+       "      <td>419.805992</td>\n",
+       "      <td>0.181077</td>\n",
+       "      <td>0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>7.929853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-02</td>\n",
+       "      <td>38</td>\n",
+       "      <td>39709</td>\n",
+       "      <td>628</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>Associate</td>\n",
+       "      <td>15</td>\n",
+       "      <td>26045</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.935132</td>\n",
+       "      <td>3</td>\n",
+       "      <td>43609</td>\n",
+       "      <td>0.207045</td>\n",
+       "      <td>0.201077</td>\n",
+       "      <td>794.054238</td>\n",
+       "      <td>0.389852</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>4.167327</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-03</td>\n",
+       "      <td>47</td>\n",
+       "      <td>40724</td>\n",
+       "      <td>570</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>26</td>\n",
+       "      <td>17627</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.872241</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5205</td>\n",
+       "      <td>0.217627</td>\n",
+       "      <td>0.212548</td>\n",
+       "      <td>666.406688</td>\n",
+       "      <td>0.462157</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>5.092486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-04</td>\n",
+       "      <td>58</td>\n",
+       "      <td>69084</td>\n",
+       "      <td>545</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>34</td>\n",
+       "      <td>37898</td>\n",
+       "      <td>96</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.896155</td>\n",
+       "      <td>5</td>\n",
+       "      <td>99452</td>\n",
+       "      <td>0.300398</td>\n",
+       "      <td>0.300911</td>\n",
+       "      <td>1047.506980</td>\n",
+       "      <td>0.313098</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>5.495906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-05</td>\n",
+       "      <td>37</td>\n",
+       "      <td>103264</td>\n",
+       "      <td>594</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>Associate</td>\n",
+       "      <td>17</td>\n",
+       "      <td>9184</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.941369</td>\n",
+       "      <td>5</td>\n",
+       "      <td>227019</td>\n",
+       "      <td>0.197184</td>\n",
+       "      <td>0.175990</td>\n",
+       "      <td>330.179140</td>\n",
+       "      <td>0.070210</td>\n",
+       "      <td>1</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>26.062620</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 37 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ApplicationDate  Age  AnnualIncome  CreditScore EmploymentStatus  \\\n",
+       "0      2018-01-01   45         39948          617         Employed   \n",
+       "1      2018-01-02   38         39709          628         Employed   \n",
+       "2      2018-01-03   47         40724          570         Employed   \n",
+       "3      2018-01-04   58         69084          545         Employed   \n",
+       "4      2018-01-05   37        103264          594         Employed   \n",
+       "\n",
+       "  EducationLevel  Experience  LoanAmount  LoanDuration MaritalStatus  ...  \\\n",
+       "0         Master          22       13152            48       Married  ...   \n",
+       "1      Associate          15       26045            48        Single  ...   \n",
+       "2       Bachelor          26       17627            36       Married  ...   \n",
+       "3    High School          34       37898            96        Single  ...   \n",
+       "4      Associate          17        9184            36       Married  ...   \n",
+       "\n",
+       "   UtilityBillsPaymentHistory JobTenure  NetWorth  BaseInterestRate  \\\n",
+       "0                    0.724972        11    126928          0.199652   \n",
+       "1                    0.935132         3     43609          0.207045   \n",
+       "2                    0.872241         6      5205          0.217627   \n",
+       "3                    0.896155         5     99452          0.300398   \n",
+       "4                    0.941369         5    227019          0.197184   \n",
+       "\n",
+       "   InterestRate  MonthlyLoanPayment  TotalDebtToIncomeRatio  LoanApproved  \\\n",
+       "0      0.227590          419.805992                0.181077             0   \n",
+       "1      0.201077          794.054238                0.389852             0   \n",
+       "2      0.212548          666.406688                0.462157             0   \n",
+       "3      0.300911         1047.506980                0.313098             0   \n",
+       "4      0.175990          330.179140                0.070210             1   \n",
+       "\n",
+       "  RiskScore  Neue_Zeile_SCHULDENVERHÄLTNIS  \n",
+       "0      49.0                       7.929853  \n",
+       "1      52.0                       4.167327  \n",
+       "2      52.0                       5.092486  \n",
+       "3      54.0                       5.495906  \n",
+       "4      36.0                      26.062620  \n",
+       "\n",
+       "[5 rows x 37 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
