--- a/test.ipynb
+++ b/test.ipynb
@@ -257,7 +257,7 @@
     }
    ],
    "source": [
-    "\"\"\" Monthly Income / Monthly Loan Payment \"\"\"\n",
+    "\"\"\" Anforderung 5: Monthly Income / Monthly Loan Payment \"\"\"\n",
     "\"\"\" Erstelle neue Zeile im bestehenden Dataaset df \"Neue_Zeile_SCHULDENVERHÄLTNIS \"\"\"\n",
     "\n",
     "df[\"Neue_Zeile_SCHULDENVERHÄLTNIS\"] = (\n",
@@ -488,6 +488,238 @@
     }
    ],
    "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LoanApproved</th>\n",
+       "      <th>RiskScore</th>\n",
+       "      <th>Schuldenverhältnis</th>\n",
+       "      <th>ApplicationDate</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>AnnualIncome</th>\n",
+       "      <th>CreditScore</th>\n",
+       "      <th>EmploymentStatus</th>\n",
+       "      <th>EducationLevel</th>\n",
+       "      <th>Experience</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TotalAssets</th>\n",
+       "      <th>TotalLiabilities</th>\n",
+       "      <th>MonthlyIncome</th>\n",
+       "      <th>UtilityBillsPaymentHistory</th>\n",
+       "      <th>JobTenure</th>\n",
+       "      <th>NetWorth</th>\n",
+       "      <th>BaseInterestRate</th>\n",
+       "      <th>InterestRate</th>\n",
+       "      <th>MonthlyLoanPayment</th>\n",
+       "      <th>TotalDebtToIncomeRatio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>7.929853</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>45</td>\n",
+       "      <td>39948</td>\n",
+       "      <td>617</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>Master</td>\n",
+       "      <td>22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>146111</td>\n",
+       "      <td>19183</td>\n",
+       "      <td>3329.000000</td>\n",
+       "      <td>0.724972</td>\n",
+       "      <td>11</td>\n",
+       "      <td>126928</td>\n",
+       "      <td>0.199652</td>\n",
+       "      <td>0.227590</td>\n",
+       "      <td>419.805992</td>\n",
+       "      <td>0.181077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>4.167327</td>\n",
+       "      <td>2018-01-02</td>\n",
+       "      <td>38</td>\n",
+       "      <td>39709</td>\n",
+       "      <td>628</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>Associate</td>\n",
+       "      <td>15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>53204</td>\n",
+       "      <td>9595</td>\n",
+       "      <td>3309.083333</td>\n",
+       "      <td>0.935132</td>\n",
+       "      <td>3</td>\n",
+       "      <td>43609</td>\n",
+       "      <td>0.207045</td>\n",
+       "      <td>0.201077</td>\n",
+       "      <td>794.054238</td>\n",
+       "      <td>0.389852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>5.092486</td>\n",
+       "      <td>2018-01-03</td>\n",
+       "      <td>47</td>\n",
+       "      <td>40724</td>\n",
+       "      <td>570</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>26</td>\n",
+       "      <td>...</td>\n",
+       "      <td>25176</td>\n",
+       "      <td>128874</td>\n",
+       "      <td>3393.666667</td>\n",
+       "      <td>0.872241</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5205</td>\n",
+       "      <td>0.217627</td>\n",
+       "      <td>0.212548</td>\n",
+       "      <td>666.406688</td>\n",
+       "      <td>0.462157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>5.495906</td>\n",
+       "      <td>2018-01-04</td>\n",
+       "      <td>58</td>\n",
+       "      <td>69084</td>\n",
+       "      <td>545</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>34</td>\n",
+       "      <td>...</td>\n",
+       "      <td>104822</td>\n",
+       "      <td>5370</td>\n",
+       "      <td>5757.000000</td>\n",
+       "      <td>0.896155</td>\n",
+       "      <td>5</td>\n",
+       "      <td>99452</td>\n",
+       "      <td>0.300398</td>\n",
+       "      <td>0.300911</td>\n",
+       "      <td>1047.506980</td>\n",
+       "      <td>0.313098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>26.062620</td>\n",
+       "      <td>2018-01-05</td>\n",
+       "      <td>37</td>\n",
+       "      <td>103264</td>\n",
+       "      <td>594</td>\n",
+       "      <td>Employed</td>\n",
+       "      <td>Associate</td>\n",
+       "      <td>17</td>\n",
+       "      <td>...</td>\n",
+       "      <td>244305</td>\n",
+       "      <td>17286</td>\n",
+       "      <td>8605.333333</td>\n",
+       "      <td>0.941369</td>\n",
+       "      <td>5</td>\n",
+       "      <td>227019</td>\n",
+       "      <td>0.197184</td>\n",
+       "      <td>0.175990</td>\n",
+       "      <td>330.179140</td>\n",
+       "      <td>0.070210</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 37 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LoanApproved  RiskScore  Schuldenverhältnis ApplicationDate  Age  \\\n",
+       "0             0       49.0            7.929853      2018-01-01   45   \n",
+       "1             0       52.0            4.167327      2018-01-02   38   \n",
+       "2             0       52.0            5.092486      2018-01-03   47   \n",
+       "3             0       54.0            5.495906      2018-01-04   58   \n",
+       "4             1       36.0           26.062620      2018-01-05   37   \n",
+       "\n",
+       "   AnnualIncome  CreditScore EmploymentStatus EducationLevel  Experience  ...  \\\n",
+       "0         39948          617         Employed         Master          22  ...   \n",
+       "1         39709          628         Employed      Associate          15  ...   \n",
+       "2         40724          570         Employed       Bachelor          26  ...   \n",
+       "3         69084          545         Employed    High School          34  ...   \n",
+       "4        103264          594         Employed      Associate          17  ...   \n",
+       "\n",
+       "   TotalAssets  TotalLiabilities MonthlyIncome  UtilityBillsPaymentHistory  \\\n",
+       "0       146111             19183   3329.000000                    0.724972   \n",
+       "1        53204              9595   3309.083333                    0.935132   \n",
+       "2        25176            128874   3393.666667                    0.872241   \n",
+       "3       104822              5370   5757.000000                    0.896155   \n",
+       "4       244305             17286   8605.333333                    0.941369   \n",
+       "\n",
+       "  JobTenure  NetWorth  BaseInterestRate  InterestRate  MonthlyLoanPayment  \\\n",
+       "0        11    126928          0.199652      0.227590          419.805992   \n",
+       "1         3     43609          0.207045      0.201077          794.054238   \n",
+       "2         6      5205          0.217627      0.212548          666.406688   \n",
+       "3         5     99452          0.300398      0.300911         1047.506980   \n",
+       "4         5    227019          0.197184      0.175990          330.179140   \n",
+       "\n",
+       "   TotalDebtToIncomeRatio  \n",
+       "0                0.181077  \n",
+       "1                0.389852  \n",
+       "2                0.462157  \n",
+       "3                0.313098  \n",
+       "4                0.070210  \n",
+       "\n",
+       "[5 rows x 37 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Change name of \"Neue_Zeile_SCHULDENVERHÄLTNIS\" to Spalte (weil es ist eien Spalte)\n",
+    "# Anforderung 6\n",
+    "df.rename(columns={\"Neue_Zeile_SCHULDENVERHÄLTNIS\": \"Schuldenverhältnis\"}, inplace=True)\n",
+    "\n",
+    "# switch index -1 column with index 0 column\n",
+    "cols = df.columns.tolist()\n",
+    "cols = [cols[-1]] + cols[:-1]\n",
+    "df = df[cols]\n",
+    "\n",
     "df.head()"
    ]
   }
