--- a/test.ipynb
+++ b/test.ipynb
@@ -947,6 +947,234 @@
     "df = df.drop('Schuldenverhältnis', axis=1) \n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LoanApproved</th>\n",
+       "      <th>RiskScore</th>\n",
+       "      <th>ApplicationDate</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>AnnualIncome</th>\n",
+       "      <th>CreditScore</th>\n",
+       "      <th>EmploymentStatus</th>\n",
+       "      <th>EducationLevel</th>\n",
+       "      <th>Experience</th>\n",
+       "      <th>LoanAmount</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TotalAssets</th>\n",
+       "      <th>TotalLiabilities</th>\n",
+       "      <th>MonthlyIncome</th>\n",
+       "      <th>UtilityBillsPaymentHistory</th>\n",
+       "      <th>JobTenure</th>\n",
+       "      <th>NetWorth</th>\n",
+       "      <th>BaseInterestRate</th>\n",
+       "      <th>InterestRate</th>\n",
+       "      <th>MonthlyLoanPayment</th>\n",
+       "      <th>TotalDebtToIncomeRatio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>45</td>\n",
+       "      <td>39948</td>\n",
+       "      <td>617</td>\n",
+       "      <td>EMPLOYED</td>\n",
+       "      <td>Master</td>\n",
+       "      <td>22</td>\n",
+       "      <td>13152</td>\n",
+       "      <td>...</td>\n",
+       "      <td>146111</td>\n",
+       "      <td>19183</td>\n",
+       "      <td>3329.000000</td>\n",
+       "      <td>0.724972</td>\n",
+       "      <td>11</td>\n",
+       "      <td>126928</td>\n",
+       "      <td>0.199652</td>\n",
+       "      <td>0.227590</td>\n",
+       "      <td>419.805992</td>\n",
+       "      <td>0.181077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2018-01-02</td>\n",
+       "      <td>38</td>\n",
+       "      <td>39709</td>\n",
+       "      <td>628</td>\n",
+       "      <td>EMPLOYED</td>\n",
+       "      <td>Associate</td>\n",
+       "      <td>15</td>\n",
+       "      <td>26045</td>\n",
+       "      <td>...</td>\n",
+       "      <td>53204</td>\n",
+       "      <td>9595</td>\n",
+       "      <td>3309.083333</td>\n",
+       "      <td>0.935132</td>\n",
+       "      <td>3</td>\n",
+       "      <td>43609</td>\n",
+       "      <td>0.207045</td>\n",
+       "      <td>0.201077</td>\n",
+       "      <td>794.054238</td>\n",
+       "      <td>0.389852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2018-01-03</td>\n",
+       "      <td>47</td>\n",
+       "      <td>40724</td>\n",
+       "      <td>570</td>\n",
+       "      <td>EMPLOYED</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>26</td>\n",
+       "      <td>17627</td>\n",
+       "      <td>...</td>\n",
+       "      <td>25176</td>\n",
+       "      <td>128874</td>\n",
+       "      <td>3393.666667</td>\n",
+       "      <td>0.872241</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5205</td>\n",
+       "      <td>0.217627</td>\n",
+       "      <td>0.212548</td>\n",
+       "      <td>666.406688</td>\n",
+       "      <td>0.462157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>2018-01-04</td>\n",
+       "      <td>58</td>\n",
+       "      <td>69084</td>\n",
+       "      <td>545</td>\n",
+       "      <td>EMPLOYED</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>34</td>\n",
+       "      <td>37898</td>\n",
+       "      <td>...</td>\n",
+       "      <td>104822</td>\n",
+       "      <td>5370</td>\n",
+       "      <td>5757.000000</td>\n",
+       "      <td>0.896155</td>\n",
+       "      <td>5</td>\n",
+       "      <td>99452</td>\n",
+       "      <td>0.300398</td>\n",
+       "      <td>0.300911</td>\n",
+       "      <td>1047.506980</td>\n",
+       "      <td>0.313098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>2018-01-05</td>\n",
+       "      <td>37</td>\n",
+       "      <td>103264</td>\n",
+       "      <td>594</td>\n",
+       "      <td>EMPLOYED</td>\n",
+       "      <td>Associate</td>\n",
+       "      <td>17</td>\n",
+       "      <td>9184</td>\n",
+       "      <td>...</td>\n",
+       "      <td>244305</td>\n",
+       "      <td>17286</td>\n",
+       "      <td>8605.333333</td>\n",
+       "      <td>0.941369</td>\n",
+       "      <td>5</td>\n",
+       "      <td>227019</td>\n",
+       "      <td>0.197184</td>\n",
+       "      <td>0.175990</td>\n",
+       "      <td>330.179140</td>\n",
+       "      <td>0.070210</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LoanApproved  RiskScore ApplicationDate  Age  AnnualIncome  CreditScore  \\\n",
+       "0             0       49.0      2018-01-01   45         39948          617   \n",
+       "1             0       52.0      2018-01-02   38         39709          628   \n",
+       "2             0       52.0      2018-01-03   47         40724          570   \n",
+       "3             0       54.0      2018-01-04   58         69084          545   \n",
+       "4             1       36.0      2018-01-05   37        103264          594   \n",
+       "\n",
+       "  EmploymentStatus EducationLevel  Experience  LoanAmount  ...  TotalAssets  \\\n",
+       "0         EMPLOYED         Master          22       13152  ...       146111   \n",
+       "1         EMPLOYED      Associate          15       26045  ...        53204   \n",
+       "2         EMPLOYED       Bachelor          26       17627  ...        25176   \n",
+       "3         EMPLOYED    High School          34       37898  ...       104822   \n",
+       "4         EMPLOYED      Associate          17        9184  ...       244305   \n",
+       "\n",
+       "  TotalLiabilities  MonthlyIncome UtilityBillsPaymentHistory  JobTenure  \\\n",
+       "0            19183    3329.000000                   0.724972         11   \n",
+       "1             9595    3309.083333                   0.935132          3   \n",
+       "2           128874    3393.666667                   0.872241          6   \n",
+       "3             5370    5757.000000                   0.896155          5   \n",
+       "4            17286    8605.333333                   0.941369          5   \n",
+       "\n",
+       "   NetWorth  BaseInterestRate  InterestRate  MonthlyLoanPayment  \\\n",
+       "0    126928          0.199652      0.227590          419.805992   \n",
+       "1     43609          0.207045      0.201077          794.054238   \n",
+       "2      5205          0.217627      0.212548          666.406688   \n",
+       "3     99452          0.300398      0.300911         1047.506980   \n",
+       "4    227019          0.197184      0.175990          330.179140   \n",
+       "\n",
+       "   TotalDebtToIncomeRatio  \n",
+       "0                0.181077  \n",
+       "1                0.389852  \n",
+       "2                0.462157  \n",
+       "3                0.313098  \n",
+       "4                0.070210  \n",
+       "\n",
+       "[5 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\" Anforderung 7 \"\"\"\n",
+    "\"\"\" einmal toLower einmal toUpper \"\"\"\n",
+    "df[\"EmploymentStatus\"] = df[\"EmploymentStatus\"].str.lower()\n",
+    "df.head()\n",
+    "df[\"EmploymentStatus\"] = df[\"EmploymentStatus\"].str.upper()\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
