--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -214,12 +214,13 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Anforderung 4\n",
     "import pandas as pd\n",
     "\n",
     "# Load Dataset\n",
@@ -231,7 +232,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([25, 35, 45, 55, 65]),\n",
+       " array([0.45, 1.23, 3.67, 2.89, 4.56]),\n",
+       " array(['employed', 'unemployed', 'self-employed', 'retired', 'student'],\n",
+       "       dtype='<U13'),\n",
+       " array([ True, False,  True, False,  True]))"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Anforderung 1\n",
+    "import numpy as np\n",
+    "\n",
+    "# Integer array\n",
+    "int_array = np.array([25, 35, 45, 55, 65], dtype=int)\n",
+    "\n",
+    "# Float array\n",
+    "float_array = np.array([0.45, 1.23, 3.67, 2.89, 4.56], dtype=float)\n",
+    "\n",
+    "# String array\n",
+    "string_array = np.array(['employed', 'unemployed', 'self-employed', 'retired', 'student'], dtype=str)\n",
+    "\n",
+    "# Boolean array\n",
+    "bool_array = np.array([True, False, True, False, True], dtype=bool)\n",
+    "\n",
+    "# Display the manually created arrays\n",
+    "int_array, float_array, string_array, bool_array\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([45, 65])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Anforderung 2\n",
+    "# 1. Integer array values greater than 30\n",
+    "# 2. Boolean array is True\n",
+    "\n",
+    "filtered_int_array = int_array[(int_array > 30) & bool_array]\n",
+    "\n",
+    "# Display the filtered arrays\n",
+    "filtered_int_array\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(45.0), np.float64(45.0), np.float64(4.56), np.float64(0.45))"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Anforderung 3\n",
+    "\n",
+    "# For the integer array\n",
+    "mean_int_array = np.mean(int_array)\n",
+    "median_int_array = np.median(int_array)\n",
+    "\n",
+    "# For the float array\n",
+    "max_float_array = np.max(float_array)\n",
+    "min_float_array = np.min(float_array)\n",
+    "\n",
+    "# Displaying the results for the float array\n",
+    "mean_int_array, median_int_array, max_float_array, min_float_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +350,7 @@
        "Name: Neue_Zeile_SCHULDENVERHÄLTNIS, Length: 20000, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +369,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +588,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +811,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +1043,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1268,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
