--- a/test.ipynb
+++ b/test.ipynb
@@ -2506,7 +2506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2584,6 +2584,7 @@
     "#Anforderung 2.1\n",
     "\n",
     "# Korrelation zwischen Age, AnnualIncome und LoanApproved\n",
+    "#Erkenntnis: AnnualIncome hat großen Einfluss auf LoanApproved\n",
     "correlation_selected_features = df[['Age','LoanApproved','AnnualIncome']].corr(numeric_only=True)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.heatmap(correlation_selected_features, annot=True, fmt='.2g', cmap='coolwarm', cbar=True)\n",
@@ -2597,7 +2598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2674,7 +2675,7 @@
    "source": [
     "#Anforderung2.2\n",
     "# Korrelation zwischen NetWorth, DebtToIncomeRatio und LoanApproved\n",
-    "\n",
+    "#Erkenntnis: DebtToIncomeRatio hat fast keinen Einfluss und NetWorth großen Einfluss auf LoanApproved\n",
     "correlation_selected_features2= df[['DebtToIncomeRatio','LoanApproved','NetWorth']].corr(numeric_only=True)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.heatmap(correlation_selected_features2, annot=True, fmt='.2g', cmap='coolwarm', cbar=True)\n",
