add: Kapitel 5 Anforderung 2

--- a/test.ipynb
+++ b/test.ipynb
@@ -3235,6 +3235,33 @@
     "kmeans.fit(data_scaled)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.65497713,  0.03265971, -0.36960299],\n",
+       "       [ 0.82519718, -0.04114754,  0.46565801]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\" Interpretation \"\"\"\n",
+    "\"\"\" 2 Cluster mit je Age LoanAmount AnnualIncome \"\"\"\n",
+    "\"\"\" CLuster 1: Age liegt weiter unterm mittleren Durchscnitt (jung) -> Höherer Loan Amount -> Niedrigeres Annual Income\"\"\"\n",
+    "\"\"\" Cluster 2: Age liegt weiter deutlich über dem mittleren Durchschnitt (alt) -> Niedrigerer Loan Amount -> Deutlich Höheres Annual Income\"\"\"\n",
+    "\"\"\" Scaler : Df = [-1, 1]\"\"\"\n",
+    "\n",
+    "kmeans.cluster_centers_"
+   ]
   }
  ],
  "metadata": {
