add: Kapitel 5 Anforderung 2 Silhoulette-Score

--- a/test.ipynb
+++ b/test.ipynb
@@ -3262,6 +3262,26 @@
     "\n",
     "kmeans.cluster_centers_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" Setzen Sie die Parameter des Algorithmus mit Hilfe überwachter oder unüberwachter Evaluationsmethoden. Begründen Sie die Auswahl des Evaluationsalgorithmus. \"\"\"\n",
+    "\n",
+    "\"\"\" Anforderung 2: Silhouette Score \"\"\"\n",
+    "from sklearn.metrics import silhouette_score\n",
+    "\n",
+    "silhouette_avg = silhouette_score(data_scaled, kmeans.labels_)\n",
+    "{silhouette_avg}\n",
+    "\n",
+    "\"\"\" was sagt der silhouette score: wie gut die qualität der cluster ist\n",
+    "wert nahe 0: schlechter cluster, überlappende werte\n",
+    "wert nahe 1: guter cluster, keine überlappung \"\"\"\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
