fix: Kapitel 5 Anforderung 2

--- a/test.ipynb
+++ b/test.ipynb
@@ -3265,23 +3265,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{np.float64(0.25461419945152236)}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Setzen Sie die Parameter des Algorithmus mit Hilfe überwachter oder unüberwachter Evaluationsmethoden. Begründen Sie die Auswahl des Evaluationsalgorithmus. \"\"\"\n",
     "\n",
     "\"\"\" Anforderung 2: Silhouette Score \"\"\"\n",
+    "\"\"\" was sagt der silhouette score: wie gut die qualität der cluster ist\n",
+    "wert nahe 0: schlechter cluster, überlappende werte\n",
+    "wert nahe 1: guter cluster, keine überlappung \"\"\"\n",
     "from sklearn.metrics import silhouette_score\n",
     "\n",
     "silhouette_avg = silhouette_score(data_scaled, kmeans.labels_)\n",
     "{silhouette_avg}\n",
-    "\n",
-    "\"\"\" was sagt der silhouette score: wie gut die qualität der cluster ist\n",
-    "wert nahe 0: schlechter cluster, überlappende werte\n",
-    "wert nahe 1: guter cluster, keine überlappung \"\"\"\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
