add: Kapitel 5 Anforderung 3

--- a/test.ipynb
+++ b/test.ipynb
@@ -3298,7 +3298,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\"\"\" Anforderung 3 : Betrachten Sie die gebildeten Cluster. Wie gut sind sie intuitiv?\n",
+    " Welche Informationen über Ihren Datensatz ziehen Sie daraus? \n",
+    " Leiten sich weitere Schritte der Datenbereinigung oder der Datenaufbereitung ab? \"\"\"\n",
+    "\n",
+    "\"\"\" Cluster 1: Junge Leute mit hohem Loan Amount und niedrigem Annual Income\"\"\"\n",
+    "\"\"\" Cluster 2: Ältere Leute mit niedrigem Loan Amount und hohem Annual Income\"\"\"\n",
+    "\"\"\" Keine weitere Datenbereiningung notwendig, da die Cluster in unseren Augen sinnvoll sind \"\"\""
+   ]
   }
  ],
  "metadata": {
