fix: Text Woche 7, Anforderung 4

--- a/test.ipynb
+++ b/test.ipynb
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2994,7 +2994,7 @@
     "\n",
     "Der Titel des Diagramms lautet „Jährliche Anzahl genehmigter Anträge“, und die Achsentitel werden entsprechend angepasst: Die x-Achse repräsentiert die Jahre, und die y-Achse zeigt die Anzahl der genehmigten Kredite. Schließlich wird das Diagramm mit \"plt.show()\" angezeigt.\n",
     "\n",
-    "Das Diagramm gibt eine klare visuelle Darstellung der jährlichen Schwankungen in der Anzahl der genehmigten Kreditanträge, was dabei hilft, Trends oder Muster im Zeitverlauf zu erkennen."
+    "Das Diagramm gibt eine klare visuelle Darstellung der jährlichen Schwankungen in der Anzahl der genehmigten Kreditanträge, was dabei hilft, Trends oder Muster im Zeitverlauf zu erkennen. In unserem Fall lässt sich jedoch trotz der großen Schwankungen im Zeitverlauf kein wirkliches Muster erkennen."
    ]
   },
   {
