--- a/test.ipynb
+++ b/test.ipynb
@@ -8184,7 +8184,7 @@
     "# Nichtlinearer Anteil in den Features: PolynomialFeatures\n",
     "poly = PolynomialFeatures(2)\n",
     "X_train_polynom = poly.fit_transform(X_train)\n",
-    "X_dev_polynom = poly.fit_transform(X_dev)       #05.01.25 Wofür ist das hier?"
+    "X_dev_polynom = poly.fit_transform(X_dev)       "
    ]
   },
   {
