--- a/test.ipynb
+++ b/test.ipynb
@@ -7497,7 +7497,7 @@
    "source": [
     "Modellieren Schritt 6: Ergebnisse\n",
     "\n",
-    "Der R-Wert sinkt von 0.708 auf 0.704, bleibt jedoch immer noch deutlich besser als im einfachsten Modell mit einem Wert von 0.041. Der nächste Schritt ist der ANOVA-Vergleich (Analysis of Variance), bei dem jedes Modell mit dem nächstfolgenden verglichen wird, und die Modelle in der Reihenfolge des Aufrufs analysiert werden. Die Ergebnisse zeigen, dass der p-Wert für alle Features unter 0.05 liegt, was darauf hinweist, dass das Modell insgesamt signifikant ist. Besonders relevante Features haben einen p-Wert von 0, was ihre Signifikanz bestätigt. (https://speiser.hft-pages.io/vl-data-analytics/modeling/4-modeling-regression.html)"
+    "Der R-Wert sinkt von 0.708 auf 0.704, bleibt jedoch immer noch deutlich besser als im einfachsten Modell mit einem Wert von 0.041. Der nächste Schritt ist der ANOVA-Vergleich (Analysis of Variance), bei dem jedes Modell mit dem nächstfolgenden verglichen wird, und die Modelle in der Reihenfolge des Aufrufs analysiert werden. Die Ergebnisse zeigen, dass der p-Wert für alle Features unter 0.05 liegt (ein möglicher Hinweis dass das Modell insgesamt signifikant ist) (https://speiser.hft-pages.io/vl-data-analytics/modeling/4-modeling-regression.html)"
    ]
   },
   {
